fix upload and view images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <a class="navbar-brand" href="index.php"><img class="navbarimg" src="core/img/box.png" width="42" height="42"></a>
+        <a class="navbar-brand" href="index.html"><img class="navbarimg" src="core/img/box.png" width="42" height="42"></a>
         <button id="btnLogout" class="btnLogout btnLogout--menu" class="button" onclick="signoutUser()">Logout</button></p>
         <button class="menuBtn menuBtn--menu"id="login_popup">
           My account
@@ -108,7 +108,7 @@
               </div>
               <br>
               <div class="preview_zone" id="preview_zone">
-                <img id="img" width="100%" height="auto" />
+                <img id="img" width="40%" height="auto" />
               </div>
               <br>
               <div class="progress">
