--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
 <link rel="apple-touch-icon" sizes="57x57" href="core/img/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="core/img/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="core/img/apple-icon-72x72.png">
@@ -15,152 +16,148 @@
 <link rel="icon" type="image/png" sizes="32x32" href="core/img/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="96x96" href="core/img/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="core/img/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="core/img/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="msapplication-TileImage" content="core/img/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>uploadbox</title>
+<title>Uploadbox</title>
 
-<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="./core/css/styles.css" rel="stylesheet">
+<link href="core/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="core/css/styles.css" rel="stylesheet">
 
 </head>
 
 <body> 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <a class="navbar-brand" href="index.html"><img class="navbarimg" src="core/img/box.png" width="42" height="42"></a>
-        <button id="btnLogout" class="btnLogout btnLogout--menu" class="button" onclick="signoutUser()">Logout</button></p>
-        <button class="menuBtn menuBtn--menu"id="login_popup">
-          My account
-        </button>
-        <p class="user_name" id="user_name_info"></p>
+<div id="index">
+  <div class="row">
+      <div class="col-xl-6 left-div">
+          <div class="left-vertical-div">
+            <p class="title-div">Uploadbox</p>
+            <p class="text-div">A platform to upload your photos and share them with your friends.</p>
+          </div>
       </div>
-    </div>
-  </div>
-
-  <br>
-
-  <div class="container" id="index">
-    <div class="row" id="margintop10">
-      <div class="col-md-12 text-center">
-        <p class="page-upload">UPLOADBOX</p>
-        <p class="text-upload">A platform to upload your photos and share them with your friends.</p>
-      </div>
-      </div>
-  </div>
-
-  <div class="container" id="my_library">
-    <div class="row" id="margintop10">
-        <div class="col-md-12">
-            <p class="title_library">LIBRARY</p>
-          <button class="uploadBtn uploadBtn--upload" id="upload_popup">
-            Upload
-          </button>
-        </div>
-        <div class="container">
-            <div class="row" id="photo_library">
-            </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="modal_login_popup" class="modal">
-    <div class="modal-content">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <p class="page_img--account">Login account</p>
-            <br>
-            <div class="card">
-              <article class="card-body">
+      <div class="col-xl-6 right-div text-center"> 
+        <div class="form-right">
+          <p class="title-div-login">Sign up to</p>
                   <button class="loginBtn loginBtn--facebook" onclick="FacebookLogin();">
                     Login with Facebook
                   </button>
+                  <br>
                   <button class="loginBtn loginBtn--google" onclick="GoogleLogin();">
                     Login with Google
                   </button>
+                  <br>
                   <button class="loginBtn loginBtn--github" onclick="GithubLogin();">
                     Login with Github
                   </button>
+                  <br>
                   <button class="loginBtn loginBtn--twitter" onclick="TwitterLogin();">
                     Login with Twitter
                   </button>
+                  <br>
                   <button class="loginBtn loginBtn--yahoo" onclick="YahooLogin();">
-                    Login with Login
+                     Login with Yahoo
                   </button>
-              </article>
-              </div>
-          </div>
         </div>
-      </div>
-      <br>
-      <span class="close1">&times;</span>
+        <footer>
+          <p>© 2020 uploadbox</p>
+        </footer>
     </div>
   </div>
+</div>
+<div id="content">
+  <nav class="navbar navbar-expand-lg navbar-dark primary-color bg-blue">
+    <a class="navbar-brand" href="#">UPLOADBOX</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+      aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="basicExampleNav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#upload" >Upload</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+      <div class="form-inline">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" id="user_name_info" href=""></a>
+            </li>
 
-  <div id="modal_upload_popup" class="modal">
-    <div class="modal-content">
-
-      <div class="container">
-        <div class="row">
-
-        <div class="col-md-12">
-        <p class="page_img--account">upload photo</p>
-        <hr>
-        <div class="panel panel-default text-center">
-          <div class="panel-body">
-            <form action="" method="post" enctype="multipart/form-data" id="js-upload-form">
-              <div class="form-inline">
-                <div class="form-group ">
-                  <input class="fileContainer" style="color:black;" type="file" id="image" accept="image/*" >
-                </div>
-              </div>
-              <br>
-              <div class="preview_zone" id="preview_zone">
-                <img id="img" width="40%" height="auto" />
-              </div>
-              <br>
-              <div class="progress">
-                <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0"
-                  aria-valuemin="0" aria-valuemax="100" style="width:0%">
-                </div>
-              </div>
-              <div class="js-upload-finished" id="success">
-                <div class="list-group">
-                  <p class="list-group-item list-group-item-success" id="success_date"><span class="badge alert-success pull-right">Success</span> name</p>
-                </div>
-                <br>                 
-              </div>
-              </div>
-                <br>
-                <button class="uploadBtn2 uploadBtn2--upload2" type="button" onclick="upload()" >Upload</button>
-                </form>
-                </div>
-              </div>
-          </div>
-          <br>
-          <span class="close3">&times;</span>
-        </div>
+            <li class="nav-item">
+              <a class="nav-link" id="btnLogout" onclick="signoutUser();" href="">Logout</a>
+            </li>
+        </ul>
       </div>
     </div>
-  </div>
-
-  <footer class="page-footer font-small blue">
-    <div class="footer-copyright text-center py-3">U P L O A D B O X <a href="https://davidespier.com/">© davidespier.com</a>
+  </nav>
+  <div class="container">
+    <p class="library-name">My library</p>
+    <div class="row" id="photo_library">
     </div>
+  </div>
+  <footer class="content-footer">
+    <p>© 2020 uploadbox</p>
   </footer>
+</div>
 
+<div id="upload" class="overlay">
+  <div class="popup">
+    <a class="close" href="#">&times;</a>
+      <form class="text-center" action="" method="post" enctype="multipart/form-data" id="js-upload-form">
+        <p class="upload-file">Upload file</p>
+
+          <br>
+        <div class="preview_zone" id="preview_zone">
+          <img id="img" width="30%" height="auto" />
+        </div>
+          <br>
+        <div class="progress">
+          <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0"
+                      aria-valuemin="0" aria-valuemax="100" style="width:0%">
+          </div>
+        </div>
+        <br>
+        <div class="js-upload-finished" id="success">
+          <div class="list-group">
+            <p class="list-group-item list-group-item-success" id="success_date"><span class="badge alert-success pull-right">Success</span> name</p>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <label class="custom-file-upload text-center">
+              <input lass="fileContainer" style="color:black;" type="file" id="image" accept="image/*"/>
+              Search photo
+            </label>
+          </div>
+          <div class="col-md-6">
+            <button id="buttonUpload" type="button" onclick="upload()" >Upload</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
+
+<script src="core/vendor/jquery/jquery.slim.min.js"></script>
+<script src="core/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-auth.js"></script>
-<script src="./core/js/app.js"></script>
+<script src="core/js/app.js"></script>
 
 
 </body>
