--- a/images.html
+++ b/images.html
@@ -43,8 +43,8 @@
                 <div class="dropdown">
                  <a id="user_name_info"></a><img class="img-ico-arrow" src="core/img/ico/arrow-down.png" >
                   <div class="dropdown-content">
-                    <a href="#"><img class="img-ico-user-profile" src="core/img/ico/gear-fill.png" >Settings</a>
-                    <a href="#"><img class="img-ico-user-profile" src="core/img/ico/box-arrow-in-right.png" >Logout</a>
+                    <a href=""><img class="img-ico-user-profile" src="core/img/ico/gear-fill.png" >Settings</a>
+                    <a href="" onclick="signoutUser();"><img class="img-ico-user-profile" src="core/img/ico/box-arrow-in-right.png" >Logout</a>
                   </div>
                 </div>
               </nav>
