--- a/index.html
+++ b/index.html
@@ -34,15 +34,12 @@
 </head>
 <body> 
 
-  <div class="row">
-      <div class="col-xl-6 left-div">
-          <div class="left-vertical-div">
-            <p class="title-div">Uploadbox</p>
-            <p class="text-div">A platform to upload your photos and share them with your friends.</p>
+      <div class="col-md-12 global-div">
+          <div class="¡">
+            <p class="title">Uploadbox</p>
+            <p class="text">A platform to upload your photos and share them with your friends.</p>
           </div>
-      </div>
-      <div class="col-xl-6 right-div text-center"> 
-        <div class="form-right">
+        <div class="form">
           <p class="title-div-login">Sign up to</p>
                   <button class="loginBtn loginBtn--facebook" onclick="FacebookLogin();">
                     Login with Facebook
@@ -64,11 +61,12 @@
                      Login with Yahoo
                   </button>
         </div>
+
+
         <footer>
           <p>© 2020 uploadbox</p>
         </footer>
     </div>
-  </div>
 
 
 <script src="core/vendor/jquery/jquery.slim.min.js"></script>
